syntax = "proto3";

service AuthService {
	rpc Register(RegisterReq) returns (RegisterResp) {}
	rpc Authenticate(AuthReq) returns (AuthResp) {}
}

message RegisterReq {
	string identifier = 1;
	string password = 2;
}

message RegisterResp {}

message AuthReq {
	string identifier = 1;
	string password = 2;
}

message AuthResp {}
